refactor: libhook (3.7/4)